branch mytest1 updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,34 @@
 <!-- This should be fix bar at the top -->
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" src="assets/img/mpschub.png">
+      </a>
+    </div>
+    
+    <div class="btn-group navbar-right">
+      <button type="button" class="btn btn-default navbar-btn"><i class="fa fa-user" aria-hidden="true"></i> My Account</button>
+      <button type="button" class="btn btn-info dropdown-toggle navbar-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="caret"></span>
+        <span class="sr-only">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">Action</a></li>
+        <li><a href="#">Another action</a></li>
+        <li><a href="#">Something else here</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!--
 <div id="topbar-fix" class="page-header">
   <a href="#" routerLink="/home">
     <span class="glyphicon glyphicon-home">Main Page</span>
   </a>
-  <div>Manipur Study Circle</div>
+  <div>MPSC Hub</div>
 </div>
 
 <ol class="breadcrumb">
@@ -15,3 +40,4 @@
 <footer>
   <small style="color: grey">Developed by RRPARTY</small>
 </footer>
+-->
