--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,12 +1,14 @@
+<!-- Question form, to be enabled for moderators only -->
 <div class="container">
   <input type="checkbox" #admin (change)="admin.checked" id="isAdmin"><label for="isAdmin">Moderator</label>
   <form class="form-group" *ngIf="admin.checked">
     <input class="form-control" type="text" id="newQ" name="newQuestion" placeholder="Enter new question">
   </form>
 </div>
+
+<!-- List of questions under the selected topic -->
 <div *ngFor="let question of questions">
   <p>{{question.qid}}. {{question.qText}}</p>
-
   <form #choice="ngForm" class="form-group">
     <div *ngFor="let option of question.options">
       <input type="radio" [name]="question.qid" [id]="option.choice" [value]="option.choice" ngModel [disabled]="disabled">
@@ -15,6 +17,8 @@
     </div>
     <input type="submit" value="Submit" (click)="submit(choice);show = true; disabled=true" [disabled]="disabled" />
   </form>
+  
+  <!-- Answer evaluation & explanation -->
   <div class="card" *ngIf="show" [ngSwitch]="choice.value[question.qid]==question.answer.choice">
     <p class="alert-success" *ngSwitchCase="true">
       Correct</p>
