--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -1,3 +1,5 @@
-<h1>{{topic.id}} {{topic.name}}</h1>
+<div class="container">
+    <h2 class="content-title">{{topic.id}} {{topic.name}}</h2>
 
-<app-question></app-question>
+    <app-question></app-question>
+</div>
