--- a/src/app/curriculum/curriculum.component.html
+++ b/src/app/curriculum/curriculum.component.html
@@ -1,11 +1,13 @@
-<h1>{{curriculum.id + 1}} {{curriculum.name}}</h1>
-<ol>
-  <li><a href="#" [routerLink]="['/topic', {id:1}]">General Science</a></li>
-  <li>Current events of national and international importance</li>
-  <li>History of India and Indian National Movement</li>
-  <li>Indian World Geography</li>
-  <li>World Geography</li>
-  <li>Indian Polity</li>
-  <li>Indian Economy</li>
-  <li>General Mental Ability</li>
-</ol>
+<div class="container">
+  <h2 class="content-title">{{curriculum.id + 1}} {{curriculum.name}}</h2>
+  <ol>
+    <li><a href="#" [routerLink]="['/topic', {id:1}]">General Science</a></li>
+    <li>Current events of national and international importance</li>
+    <li>History of India and Indian National Movement</li>
+    <li>Indian World Geography</li>
+    <li>World Geography</li>
+    <li>Indian Polity</li>
+    <li>Indian Economy</li>
+    <li>General Mental Ability</li>
+  </ol>
+</div>
