--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import url(http://fonts.googleapis.com/css?family=Satisfy);
-@import url(http://fonts.googleapis.com/css?family=Concert+One);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url('https://fonts.googleapis.com/css?family=Abel');
 
-@import '~assets/css/bootstrap.css';
+@import '~assets/css/bootstrap4.css';
 @import '~assets/css/font-awesome.min.css';
 
+body{
+    font-family: 'Abel', sans-serif !important;
+}
 /*override bootstrap*/
-.clearfix {clear: both;}
+/*.clearfix {clear: both;}
 .navbar-brand {float: none; padding: 0;}
 .nav > li > a:hover, .nav > li > a:focus, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {background-color: transparent;}
 .form-inline .form-group {margin-bottom: 4px; display: inline-block;}
@@ -129,9 +130,32 @@ transition: background-color 0.2s linear 0s;
 .img-rounded {border-radius: 100%;}
 
 blockquote h3 {margin-top: 0; font-style: normal;}
-
+*/
+footer{
+    margin-top: 50px;
+}
 /**header**/
+
 .navbar-brand img{
     width:100px;
     margin-top: -4px;
 }
+.acct-btn{
+   
+}
+
+@media screen and (min-width:768px){
+   
+}
+@media screen and (min-width:992px){
+    
+}
+@media screen and (min-width:1200px){
+    
+}
+
+/**components**/
+.content-title{
+    margin-top: 50px;
+}
+
