--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,12 @@
-<p>
-  signup works!
-</p>
+<div class="container">
+  <div class="row row-padding-medium">
+    <div class="col-xs-12 col-sm-4 offset-sm-4">
+      <label>Login with </label>
+      <ul class="list-unstyled">
+        <li>
+          <button class="btn btn-social-icon btn-google" (click)="signup('google')"><i class="fa fa-google"></i></button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
